More updates to equations

--- a/Q1/Q1.md
+++ b/Q1/Q1.md
@@ -3,9 +3,9 @@
 The equations of motion that govern the inverted pendulum system describe the relationship between the various forces and torques acting on the cart and the pendulum. To analyze and control the system, you typically use Newton's second law for translational and rotational motion. Here's a description of the key equations and how they interact with each other:
 
 1. **Translational Motion of the Cart**:
-   
+
    The translational motion of the cart along the horizontal axis (typically the x-axis) is governed by Newton's second law, which relates the force applied to the cart to its acceleration:
-   
+
    $F = M \cdot \ddot{x}$
 
    - $F$ is the net force applied to the cart.
@@ -18,35 +18,35 @@ The equations of motion that govern the inverted pendulum system describe the re
 
    a. Torque Equilibrium Equation:
 
-      \[I \cdot \ddot{\theta} = \tau\]
+   $I \cdot \ddot{\theta} = \tau$
 
-      - $I$ is the moment of inertia of the pendulum about its pivot point.
-      - $\ddot{\theta}$ is the angular acceleration of the pendulum.
-      - $\tau$ is the total torque acting on the pendulum.
+   - $I$ is the moment of inertia of the pendulum about its pivot point.
+   - $\ddot{\theta}$ is the angular acceleration of the pendulum.
+   - $\tau$ is the total torque acting on the pendulum.
 
    b. Torque Due to Gravity:
 
-      \[\tau_{\text{gravity}} = -m \cdot g \cdot L \cdot \sin(\theta)\]
+   $\tau_{\text{gravity}} = -m \cdot g \cdot L \cdot \sin(\theta)$
 
-      - $m$ is the mass of the pendulum.
-      - $g$ is the acceleration due to gravity.
-      - $L$ is the length of the pendulum.
-      - $\theta$ is the angle between the pendulum and the vertical axis.
+   - $m$ is the mass of the pendulum.
+   - $g$ is the acceleration due to gravity.
+   - $L$ is the length of the pendulum.
+   - $\theta$ is the angle between the pendulum and the vertical axis.
 
    c. Control Torque:
 
-      \[\tau_{\text{control}} = u\]
+   $\tau_{\text{control}} = u$
 
-      - $u$ is the control torque applied to the pendulum by the actuator or control system.
+   - $u$ is the control torque applied to the pendulum by the actuator or control system.
 
 3. **System Interactions**:
 
-   - The control input \(u\) (the torque applied to the pendulum) directly affects the angular acceleration \(\ddot{\theta}\) of the pendulum.
-   
-   - The angle \(\theta\) of the pendulum affects the gravitational torque \(\tau_{\text{gravity}}\), which opposes the motion. If the pendulum deviates from the upright position, this torque tries to pull it back towards equilibrium.
-   
-   - The cart's position \(x\) affects the center of mass of the pendulum. A change in \(x\) can affect the location at which the gravitational torque is applied to the pendulum.
+   - The control input $u$ (the torque applied to the pendulum) directly affects the angular acceleration $\ddot{\theta}$ of the pendulum.
 
-To control the system and maintain the balance of the inverted pendulum, you must design a control law that computes the control torque \(u\) applied to the pendulum based on measurements of the pendulum's angle \(\theta\), angular velocity \(\dot{\theta}\), and possibly the cart's position \(x\) and velocity \(\dot{x}\). The goal is to keep \(\theta\) close to zero and stabilize the system.
+   - The angle $\theta$ of the pendulum affects the gravitational torque $\tau_{\text{gravity}}$, which opposes the motion. If the pendulum deviates from the upright position, this torque tries to pull it back towards equilibrium.
+
+   - The cart's position $x$ affects the center of mass of the pendulum. A change in $x$ can affect the location at which the gravitational torque is applied to the pendulum.
+
+To control the system and maintain the balance of the inverted pendulum, you must design a control law that computes the control torque $u$ applied to the pendulum based on measurements of the pendulum's angle $\theta$, angular velocity $\dot{\theta}$, and possibly the cart's position $x$ and velocity $\dot{x}$. The goal is to keep $\theta$ close to zero and stabilize the system.
 
 The specific control algorithm used (e.g., PID control, LQR control, MPC) will determine how these equations are integrated and how feedback is used to adjust the control input to maintain balance. The choice of control strategy and the design of the control gains are critical to the system's stability and performance.
