Updates version of cartpole code to latest and works properly

--- a/Q1/Q1.md
+++ b/Q1/Q1.md
@@ -1,6 +1,6 @@
 # The Cart Problem
 
-The equations of motion that govern the inverted pendulum system describe the relationship between the various forces and torques acting on the cart and the pendulum. To analyze and control the system, you typically use Newton's second law for translational and rotational motion. Here's a description of the key equations and how they interact with each other:
+The equations of motion that govern the inverted pendulum system describe the relationship between the various forces and torques acting on the cart and the pendulum. To analyze and control the system, you typically use Newton's second law for translational and rotational motion.
 
 1. **Translational Motion of the Cart**:
 
@@ -47,6 +47,6 @@ The equations of motion that govern the inverted pendulum system describe the re
 
    - The cart's position $x$ affects the center of mass of the pendulum. A change in $x$ can affect the location at which the gravitational torque is applied to the pendulum.
 
-To control the system and maintain the balance of the inverted pendulum, you must design a control law that computes the control torque $u$ applied to the pendulum based on measurements of the pendulum's angle $\theta$, angular velocity $\dot{\theta}$, and possibly the cart's position $x$ and velocity $\dot{x}$. The goal is to keep $\theta$ close to zero and stabilize the system.
+To control the system and maintain the balance of the inverted pendulum, we must design a control law that computes the control torque $u$ applied to the pendulum based on measurements of the pendulum's angle $\theta$, angular velocity $\dot{\theta}$, and the cart's position $x$ and velocity $\dot{x}$. The goal is to keep $\theta$ close to zero and stabilize the system.
 
 The specific control algorithm used (e.g., PID control, LQR control, MPC) will determine how these equations are integrated and how feedback is used to adjust the control input to maintain balance. The choice of control strategy and the design of the control gains are critical to the system's stability and performance.
