--- a/Q1/Q1.md
+++ b/Q1/Q1.md
@@ -50,3 +50,15 @@ The equations of motion that govern the inverted pendulum system describe the re
 To control the system and maintain the balance of the inverted pendulum, we must design a control law that computes the control torque $u$ applied to the pendulum based on measurements of the pendulum's angle $\theta$, angular velocity $\dot{\theta}$, and the cart's position $x$ and velocity $\dot{x}$. The goal is to keep $\theta$ close to zero and stabilize the system.
 
 The specific control algorithm used (e.g., PID control, LQR control, MPC) will determine how these equations are integrated and how feedback is used to adjust the control input to maintain balance. The choice of control strategy and the design of the control gains are critical to the system's stability and performance.
+
+# Part B
+
+We solved the cart-pole problem in 2 ways: 1 was using a PID controller and finding a ratio of 1, 0, 4 for the P, I, and D values respectively. This allowed the cart to move slowly along the axis and stay upright.
+
+The other way we created a neural network and trained the cart to stay upright. They are both effective in staying upright, however the PID controller tends to move slower than the neural network trained cart.
+
+# Part C
+
+The maximum recoverable angle is given by the equation $\theta_{max} = \frac{2}{3} \cdot \theta_{eq}$, where $\theta_{eq}$ is the angle at which the pendulum is in equilibrium. This is because the pendulum is in equilibrium when the gravitational torque is equal to the control torque, and the gravitational torque is proportional to $\sin(\theta)$, so the maximum angle is when $\sin(\theta) = 1$. The maximum angle is also proportional to the length of the pendulum, so a longer pendulum can be at a larger angle and still be recoverable. The maximum recoverable angle for this pendulum .8 meters long is: $\theta_{max} = \frac{2}{3} \cdot \arctan(\frac{.8}{.2}) = 1.3258$ radians, or 75.9 degrees.
+
+Experimentally, the highest recoverable value was 79.91 degrees. This is likely due to the difference between the analytical equations and running the actual model.
