--- a/Q1/Q1.md
+++ b/Q1/Q1.md
@@ -1,5 +1,7 @@
 # The Cart Problem
 
+## Part A
+
 The equations of motion that govern the inverted pendulum system describe the relationship between the various forces and torques acting on the cart and the pendulum. To analyze and control the system, you typically use Newton's second law for translational and rotational motion.
 
 1. **Translational Motion of the Cart**:
@@ -51,13 +53,13 @@ To control the system and maintain the balance of the inverted pendulum, we must
 
 The specific control algorithm used (e.g., PID control, LQR control, MPC) will determine how these equations are integrated and how feedback is used to adjust the control input to maintain balance. The choice of control strategy and the design of the control gains are critical to the system's stability and performance.
 
-# Part B
+## Part B
 
 We solved the cart-pole problem in 2 ways: 1 was using a PID controller and finding a ratio of 17, 0, 33 for the P, I, and D values respectively. This allowed the cart to move slowly along the axis and stay upright. This is found in `controller.py`.
 
 The other way we created a neural network and trained the cart to stay upright. They are both effective in staying upright, however the PID controller tends to move slower than the neural network trained cart. This is found in `ml_model.py`.
 
-# Part C
+## Part C
 
 To find the maximum recoverable angle, we need to equate the torque from gravity to the torque available in movement. The torque from gravity is given by $\tau_{\text{gravity}} = -m \cdot g \cdot l \cdot \sin(\theta)$, and the torque available in movement, assuming no friction is given: 7 newtons of force. This gives us $\tau\_{\text{control}} = 7 $.
 
