Adds other equations the cart pole problem

--- a/Q1/Q1.md
+++ b/Q1/Q1.md
@@ -41,6 +41,22 @@ The equations of motion that govern the inverted pendulum system describe the re
 
    - $u$ is the control torque applied to the pendulum by the actuator or control system.
 
+   d. The Modified Barto Equations:
+
+   1) $N_c = (m_c + m_p) g - m_p l (\ddot{\theta}sin\theta + \ddot{\theta}^2 cos\theta)$
+
+   2) $\ddot{\theta} = \frac{g\sin\theta + \cos\theta 
+   \frac{
+      -F - m_p l \theta^2 sin\theta + u_csgn(N_c\dot{x} cos\theta) }
+      {m_c + m_p} + - u_c g sgn(N_c\dot{x})}
+      {l(\frac{4}{3} - \frac{m_pcos\theta}{m_c+m_p})[cos\theta - u_csgn(N_c\dot{x})]}$
+
+   3) $\ddot{x} = \frac{F + m_p l [\theta^2sin\theta + u_csgn(x)] - \frac{u_p\theta}{m_p l}}{l[\frac{4}{3} - \frac{m_pcos^2\theta}{m_c+m_p}]}$
+
+   Equation 1 means that the normal force is equal to the force of gravity minus the force of the pendulum. Equation 2 is the angular acceleration of the pendulum. Equation 3 is the acceleration of the cart. The equations are modified from the original Barto equations to account for the force of the pendulum with gravity.
+
+   The main forces acting upon the cart are gravity, the velocity of the cart, and momentum.
+
 3. **System Interactions**:
 
    - The control input $u$ (the torque applied to the pendulum) directly affects the angular acceleration $\ddot{\theta}$ of the pendulum.
