--- a/Q2/Q2.md
+++ b/Q2/Q2.md
@@ -1,24 +1,47 @@
-# Question Statement
+# Running the Code
 
-I would like you to use an Ackermann model of a robot that is 35f t long and 10f t wide
-(this is a standard US Firetruck) and run a few simple experiments with it. Please
-upload your resulting figures and Python (or other) code:
+Install all dependencies with `pip install -r requirements.txt`. Then run the code with `python main.py`.
 
-- A) (5 points) Make a list of commands (at 2Hz) that will allow this robot to traverse
-  along the edge of an 18m radius circle. The robot starts off in the center of the circle
-  (0,0). Plot the resulting path (x, y) and trajectory (x, y, and angular velocities).
-  Assume a constant velocity of 8m/s. Graduate Students: You cannot leave
-  the circle’s border.
-- B) (5 points) Do the same as the above for an equivalent skid-steer vehicle. Graduate
-  Students: You still cannot leave the circle’s border. Mwahaha
-- C) (10 points) Your Skid Steer vehicle (with the same dimensions as described for the
-  skid steer), is driving on a circle of radius 9m. Assume that you begin on the edge
-  of the circle. Calculate the positional error with our computational approximation
-  using the forward Euler method, as referred to in the course notes and illustrated
-  in Reading 2, eq. 1.6. Graph the errors and computing time for three different
-  time-steps (∆t = 1, 0.1, 0.01), error is defined as the absolute distance between the
-  expected (from equations) to real x, y position (defined analytically) over time.
-  Brief notes on what this problem is about: Imagine that you are moving a semi-truck
-  and you have GPS positions (somewhat accurate) and an internal prediction model.
-  We want the internal models to be updated based on ”ground truth” information
-  to build better estimates of the vehicle motion over time.
+# Commentary
+
+## Part A
+
+The ackermann model simply needs to get from the center of the outer circle to the edge in order to traverse the circumference. To do this as efficiently as possible, we calculated the inner circle alpha of 1.492 radians and went along that angle until we reached the edge of the larger 18m circle. Once there we traversed the circle on an alpha of 1.415 radians.
+
+For these calcuations we used equations 1.1, 1.7abc, and 1.11 ab from [Mobile Robotics](<./Mobile%20Robots-pages-16-25%20(1).pdf>)
+
+Our output is below:
+
+![Ackermann Model](./ackerman.png)
+
+Figure 1
+
+## Part B
+
+This used the same core logic as part a, but with a skid steer vehicle we were able to directly move to the radius, rotate 90 degrees, and traverse the circle.
+
+The skid steer has a more hexagonal shape than the ackermann model, which has to do with the difference in the equations used, where both a vRight and vLeft are calculated.
+
+![Skid Steer](./skidSteer.png)
+
+Figure 2
+
+## Part C
+
+The maximum error occurred around 3.5 seconds on all 3 intervals. This is likely due to the overall propogation of previous errors up to that point, and is reduced as the vehicle turns back closer to the beginning positions.
+
+The total error and time taken are below:
+
+| Interval | Total Error | Maximum Error | Time to Compute |
+| -------- | ----------- | ------------- | --------------- |
+| 1        | 17.686      | 3.92          | 0.00            |
+| 0.5      | 35.881      | 4.01          | 0.00            |
+| 0.1      | 809.404     | 17.998        | 0.00            |
+| 0.01     | 8099.923    | 17.999        | 0.01            |
+
+As you can see, this is computed quickly and the maximum error is almost the same at 0.1 as at 0.01. We also added the additional timestep 0.5 to more clearly see the difference between 0.1 and 0.01.
+
+Also, notice how 0.1 and 0.01 cannot be distingushed on the graph. This is due to total difference between values at 0.1 and 0.01 error to be
+2.48e-14. Interval 0.01 has 10x more error than 0.1, but that's because it is measuring 10x the number of intervals which are all generally off by the same amount. To reduce error we could increase the HZ on the actual vehicle as it navigates the circle to keep it closer to the ideal path.
+
+![Error](./totalErrors.png)
