Adds new timesteps

--- a/Q2/Q2.md
+++ b/Q2/Q2.md
@@ -36,6 +36,8 @@ The total error and time taken are below:
 | -------- | ----------- | ------------- | --------------- |
 | 1        | 17.686      | 3.92          | 0.00            |
 | 0.5      | 35.881      | 4.01          | 0.00            |
+| 0.2      | 404         | 17.992        | 0.00            |
+| 0.15     | 539.72      | 17.992        | 0.00            |
 | 0.1      | 809.404     | 17.998        | 0.00            |
 | 0.01     | 8099.923    | 17.999        | 0.01            |
 
@@ -45,3 +47,5 @@ Also, notice how 0.1 and 0.01 cannot be distingushed on the graph. This is due t
 2.48e-14. Interval 0.01 has 10x more error than 0.1, but that's because it is measuring 10x the number of intervals which are all generally off by the same amount. To reduce error we could increase the HZ on the actual vehicle as it navigates the circle to keep it closer to the ideal path.
 
 ![Error](./totalErrors.png)
+
+Figure 3
