Adds image folder

--- a/Q2/Q2.md
+++ b/Q2/Q2.md
@@ -12,7 +12,7 @@ For these calcuations we used equations 1.1, 1.7abc, and 1.11 ab from [Mobile Ro
 
 Our output is below:
 
-![Ackermann Model](./ackerman.png)
+![Ackermann Model](./images/ackerman.png)
 
 Figure 1
 
@@ -22,7 +22,7 @@ This used the same core logic as part a, but with a skid steer vehicle we were a
 
 The skid steer has a more hexagonal shape than the ackermann model, which has to do with the difference in the equations used, where both a vRight and vLeft are calculated.
 
-![Skid Steer](./skidSteer.png)
+![Skid Steer](./images/skidSteer.png)
 
 Figure 2
 
@@ -46,6 +46,6 @@ As you can see, this is computed quickly and the maximum error is almost the sam
 Also, notice how 0.1 and 0.01 cannot be distingushed on the graph. This is due to total difference between values at 0.1 and 0.01 error to be
 2.48e-14. Interval 0.01 has 10x more error than 0.1, but that's because it is measuring 10x the number of intervals which are all generally off by the same amount. To reduce error we could increase the HZ on the actual vehicle as it navigates the circle to keep it closer to the ideal path.
 
-![Error](./totalErrors.png)
+![Error](./images/totalErrors.png)
 
 Figure 3
