Adds cartpole and frozen lake layouts to the assignment and video of working parts

--- a/Q5/Q5.md
+++ b/Q5/Q5.md
@@ -23,3 +23,7 @@ Explain three merits and three demerits of using reinforcement learning for mech
 Draw a diagram that contrasts reinforcement learning and controls.
 
 ![RL vs Controls](Q5.png)
+
+## Part C
+
+See the code and video in the `Q5` directory.
