Adds right forceful cartpole

--- a/Q5/Q5.md
+++ b/Q5/Q5.md
@@ -26,4 +26,6 @@ Draw a diagram that contrasts reinforcement learning and controls.
 
 ## Part C
 
-See the code and video in the `Q5` directory.
+See the code for both the frozen lake and the cartpole with an aggressive right in this directory.
+
+
