Adds right forceful class and demo

--- a/Q5/Q5.md
+++ b/Q5/Q5.md
@@ -26,6 +26,6 @@ Draw a diagram that contrasts reinforcement learning and controls.
 
 ## Part C
 
+rightForcefulCartpole.py contains the cartpole simulation with the right aggressive force as 50% more than the left.
+
 See the code for both the frozen lake and the cartpole with an aggressive right in this directory.
-
-
