Adds images and the reinforcement for the death

--- a/Q5/Q5.md
+++ b/Q5/Q5.md
@@ -22,10 +22,25 @@ Explain three merits and three demerits of using reinforcement learning for mech
 
 Draw a diagram that contrasts reinforcement learning and controls.
 
-![RL vs Controls](Q5.png)
+![RL vs Controls](./images/Reinforcement_control_comparison.png)
 
 ## Part C
 
 rightForcefulCartpole.py contains the cartpole simulation with the right aggressive force as 50% more than the left.
 
 See the code for both the frozen lake and the cartpole with an aggressive right in this directory.
+
+### Comparing the Normal Frozen Lake with the Random Death Frozen Lake
+
+Here are the results for the normal frozen lake:
+
+![Normal Lake Results](./images/frozenlake_states_actions_distrib_8x8.png)
+
+![Normal Lake Map](./images/frozenlake_q_values_8x8.png)
+
+And the results for the random death frozen lake:
+
+![Random Death Lake Results](./images/random_death_frozenlake_states_actions_distrib_8x8.png)
+![Random Death Lake Map](./images/random_death_map.png)
+
+As you can see the number of states 
