--- a/Q5/Q5.md
+++ b/Q5/Q5.md
@@ -43,4 +43,8 @@ And the results for the random death frozen lake:
 ![Random Death Lake Results](./images/random_death_frozenlake_states_actions_distrib_8x8.png)
 ![Random Death Lake Map](./images/random_death_map.png)
 
-As you can see the number of states 
+As you can see the number of counts that ended inf the first 10 steps is 100,000 higher than on the normal lake. This is because the agent is randomly dying and being reset. The Q values are also generally lower because the agent is dying faster and can't learn as much.
+
+They do both have a similar number that reach 60 states, but the random death lake is lower.
+
+So, the outcomes can be similar in that both models find the goal, but the random death lake requires many more agents to arrive there because of the many deaths that occur.
