--- a/Q6/Q6.md
+++ b/Q6/Q6.md
@@ -1,8 +1,10 @@
 ## Part  
 Solution to part a is in the file emotions.py. Simply run the file and it will analyze both videos using the FER library and output 2 plots that show the predicted emotions.
+I have taken a screenshot of both plots for video one and 2, they can be found in the sub directory plots. The plots are titled partAVideo1.png and partAVideo2.png.
 
 ## Part B
- Solution to part B is in the file liveEmotions.py. When you run the program it will ask you if you want to analyze my prerecorded video or the webcam feed. If you choose webcam you must type q on the webcam output window to stop analysis and see the result plot. This program also uses the FER library to predict the emotions.
+ Solution to part B is in the file liveEmotions.py. When you run the program it will ask you if you want to analyze my prerecorded video or the webcam feed. If you choose webcam you must type q on the webcam output window to stop analysis and see the result plot. This program also uses the FER library to predict the emotions. If you don't want to run
+ it I have included a picture of the plot generated from my personal prerecorded video in the plots directory, it is titled partBVideo.png.
 
 The performance difference between the raspberry pi and my laptop when analyzing the same video "emotionRecording.mp4" (454 frames) were as follows:
 
