Part A of 7 complete

--- a/Q7/Q7.md
+++ b/Q7/Q7.md
@@ -1,1 +1,64 @@
-# Note: use Python-Robotics to get the A\* algorithm (tip from TA)
+## Part A
+
+Comparison of the various algorithms over 10 iterations (no animation).
+| Algorithm | Time (s) | Path Cost |
+|---|---|---|
+| Dijkstra | 0.33 | 121.78 |
+| A Star | 0.39 | 121.78 |
+| BFS | 0.33 | 121.78 |
+| Bidirectional | 0.39 | 122.37 |
+| RRT Star | 4.83 | 25.86 |
+
+Cleary, the RRT Start takes by far the longest, however it has the shortest path between each point. The other algorithms are all very similar in time and in length, but CusomtBidirectional is slightly slower and has a slightly longer path.
+
+Comparison with animation:
+| Algorithm | Time (s) | Path Cost |
+|---|---|---|
+| Dijkstra | 67.93 | 121.78 |
+| A Star | 34.68 | 121.78 |
+| BFS | 63.36 | 121.78 |
+| Bidirectional | 12.43 | 122.37 |
+| RRT Star | 56.62 | 22.77 |
+
+Once we have the animation to illustrate better how these algorithms are working, it is apparent that RRT Star is the best. Bidirectional is the fastest because it can come from both sides, while great to find a path, this is not super realistic for a robot because it would need to know both locations and jump between them in order to find the optimal path.
+
+RRT Star does take 56 seconds, but Dijkstra and BFS still take longer and have 6x the cost.
+
+How we calculated the path cost, where rx is the path of x coordinates and ry is the path of y coordinates.
+
+```python
+def analyzeCost(rx, ry):
+    cost = 0
+    for i in range(len(rx) - 1):
+        cost += math.hypot(rx[i] - rx[i + 1], ry[i] - ry[i + 1])
+    return cost
+```
+
+### Follow Up Questions
+
+A. The RRT Star algorithm is the most efficient in terms of path cost, but it is the slowest in terms of time.
+B. The fastest algorithm was the Bidirectional planner, with a second place win for Dijkstra.
+C. Our custom A\* does not fully take advantage of heuristics to speed up the search. It would be helpful to favor the algorithm to go towards where there is open space. RRT clearly shows that moving along the path in a minimal number of turns is the most efficient way to get to the goal. More aggressive convergence reduces the time and path cost.
+D. The best overall planner would be either A star or RRT Star. A star works so much faster, but requires a lot more back tracking and searching. RRT Star is slower, but it is more efficient in terms of path cost. In practice, it seems like RRT would end up being faster because it would be difficult to do so many small maneuvers on the robot for an A star or Dijkstra path.
+
+Graphs:
+
+#### A Star
+
+![A Star](./images/AStar.png)
+
+#### BFS
+
+![BFS](./images/BFS.png)
+
+#### Dijkstra
+
+![Dijkstra](./images/Dijkstra.png)
+
+#### Bidirectional
+
+![Bidirectional](./images/Bidirectional.png)
+
+#### RRT Star
+
+![RRT Star](./images/RRTStar.png)
