Adds images and path finding explanations

--- a/Q7/Q7.md
+++ b/Q7/Q7.md
@@ -62,3 +62,58 @@ Graphs:
 #### RRT Star
 
 ![RRT Star](./images/RRTStar.png)
+
+## Part B
+
+In identifying an algorithm we must recognize a few things: 1) That there are still obstacles that cannot be crossed regardless of elevation. 2) That the cost to move up and down is not equal. If we can move down it is cheaper than moving left or right. 3) That we can only move up or down one unit at a time. This makes something like RRT Star more challenging because it works better on longer paths.
+
+In addition, we want the cheapest path, not the necessarily the shortest. If we optimize for cost rather than distance something like Dijkstra or A\* may be better, because they check the neighbors much more frequently than RRT Star.
+
+### Selction: A Star
+
+#### How we would modify the algorithm to optimize for cost rather than distance:
+
+The heuristic function should estimate the cost from a given state to the goal state. In this case, a good heuristic would be the cost based on the elevation difference. For example, you can use the absolute elevation difference between the current state and the goal state. This encourages the algorithm to prioritize paths that involve less elevation change.
+
+Cost function: Define the cost function that calculates the cost of moving from one state to another. For flat terrain, the cost is 1, for moving uphill, it's 2 (1 for traversal + 1 for elevation), and for moving downhill, it's 0.5 (1 for traversal - 0.5 for elevation). Ensure that the cost function accounts for the terrain elevation.
+
+The priority queue should be based on total cost (g + h) rather than distance (g).
+
+### Optimal Path on map given
+
+Cost: 10 (assumes we start at elevation 1 and goal state of 1. It is ambigous in the document, so we said any elevation is an upcharge of 1 and any down is a discount of 0.5; ie 1 -> 3 is a cost of 2 and 1 -> is also a cost of 2.)
+
+Green shows a path with cost of 10.5, and the optimal is in blue with a cost of 10. We show both to show that the algorithm is working.
+
+![Optimal Path](./images/part2A.jpeg)
+
+### Optimal Path if normal traversal is 2
+
+If the cost to traverse is 2, then the optimal path is shown below:
+
+![Optimal Path](./images/part2B.jpeg)
+
+### Assumptions
+
+Different elevations would change the speed proportional to gravity. If we are on an earth-like planet then gravity will speed up the robot as it goes down and slow down the robot as it goes up. In a close to zero gravity environment, the robot would still be affected, but almost unnoticeably.
+
+A general overview of the A star algorithm:
+
+It takes in a start position and looks at the available neighbors. From those neighbors we take a relative cost (which takes into account the elevation), and then we add that cost to the distance towards the goal. We then put that onto a priority queue where the best combination of closeness and lowest cost appears. We then repeat that process and throw the values onto the queue.
+
+This algorithm makes sure we are moving towards the goal and that we are following along an optimized path (in this case for cost).
+
+Our approach to optimizing the path is summed up by this function:
+
+```python
+def heuristic(pos, goal):
+    return abs(pos[0] - goal[0]) + abs(pos[1] - goal[1])
+```
+
+And
+
+```python
+    g_score[(new_x, new_y)] + heuristic((new_x, new_y), goal),
+```
+
+where `g_score` is the elevation cost.
