--- a/Q7/Q7.md
+++ b/Q7/Q7.md
@@ -71,7 +71,7 @@ In addition, we want the cheapest path, not the necessarily the shortest. If we 
 
 ### Selction: A Star
 
-#### How we would modify the algorithm to optimize for cost rather than distance:
+#### How We Would Modify the Algorithm
 
 The heuristic function should estimate the cost from a given state to the goal state. In this case, a good heuristic would be the cost based on the elevation difference. For example, you can use the absolute elevation difference between the current state and the goal state. This encourages the algorithm to prioritize paths that involve less elevation change.
 
@@ -79,7 +79,7 @@ Cost function: Define the cost function that calculates the cost of moving from 
 
 The priority queue should be based on total cost (g + h) rather than distance (g).
 
-### Optimal Path on map given
+### Optimal Path on Given Map
 
 Cost: 10 (assumes we start at elevation 1 and goal state of 1. It is ambigous in the document, so we said any elevation is an upcharge of 1 and any down is a discount of 0.5; ie 1 -> 3 is a cost of 2 and 1 -> is also a cost of 2.)
 
@@ -117,3 +117,7 @@ And
 ```
 
 where `g_score` is the elevation cost.
+
+The more elevation change affects how we charge the move. These values can be adjusted in the calculate_move_cost function (ex: from cost of 1 to cost of 2 for moving). Using this customization we could find a great path in almost every environment.
+
+
