--- a/Q4/Q4.md
+++ b/Q4/Q4.md
@@ -38,12 +38,12 @@ A few notes on part B:
 - Looking at the Ouster OS-2, a long-range radar sensor marketed for autonomous vehicles, [this website](https://www.geoweeknews.com/news/ouster-launches-3-5k-16-channel-lidar-64-channel-sensor-longer-range) reports the price as $24,000 per unit.
 
 6 LIDAR
-- [Texas Instruments](https://www.ti.com/lit/wp/slyy150b/slyy150b.pdf?ts=1697012064674&ref_url=https%253A%252F%252Fwww.bing.com%252F) is of the opinion that the average LIDAR sensor runs for ~$10,000. While Luminar promises to drop that cost to $1,000 or even $500, I will wait until they deliver to use that figure. For now, I will assume $10,000 for one very capable lidar.
+- [Texas Instruments](https://www.ti.com/lit/wp/slyy150b/slyy150b.pdf?ts=1697012064674&ref_url=https%253A%252F%252Fwww.bing.com%252F) is of the opinion that the average LIDAR sensor runs for ~\$10,000. While Luminar promises to drop that cost to \$1,000 or even \$500, I will wait until they deliver to use that figure. For now, I will assume $10,000 for one very capable lidar.
 
 4 Camera
 - Assuming use of Intel's [Realsense Depth Camera D457](https://store.intelrealsense.com/buy-intel-realsense-depth-camera-d457.html), each camera would cost $500, coming out to $2,000 for all 4 cameras.
 
 7 Short-/Medium-Range Radar
-- Using Velodyne's VLP-16 Puck, the cost per unit is around [$4,000](https://www.thedrive.com/tech/17297/velodyne-just-cut-the-price-of-its-most-popular-lidar-sensor-in-half). For 7 units, that comes to $28,000
+- Using Velodyne's VLP-16 Puck, the cost per unit is around [\$4,000](https://www.thedrive.com/tech/17297/velodyne-just-cut-the-price-of-its-most-popular-lidar-sensor-in-half). For 7 units, that comes to $28,000
 
-Adding this all up results in $24,000 + $10,000 + $2,000 + $28,000 = $64,000 USD
+Adding this all up results in \$24,000 + \$10,000 + \$2,000 + \$28,000 = \$64,000 USD
