--- a/Q8/Q8.md
+++ b/Q8/Q8.md
@@ -1,22 +1,38 @@
-# A
+# Question 8
 
-For this section I deployed the Faster R-CNN model. It can be found in the directory FasterRCNN, to run the classification create a virtual environment (python3 -m venv .venv) and install everything in the tf2/requirements.txt file. Then run the following command:
+## Part A
+
+For this section I deployed the Faster R-CNN model. It can be found in the directory FasterRCNN, to run the classification create a virtual environment `(python3 -m venv .venv)` and install everything in the `tf2/requirements.txt` file. Then run the following command:
+
+```bash
 python -m tf2.FasterRCNN --load-from=./fasterrcnn_tf2.h5 --predict-all-directory=./grocerystore
+```
 
-The results will be saved in the FasterRCNN/detections directory. I have already pushed all the output to the repo so you can see the results there without running the code.
+The results will be saved in the `FasterRCNN/detections` directory. I have already pushed all the output to the repo so you can see the results there without running the code.
 
-# B
-I have deployed both versions of yolo, they can be found in the directories yolov5/8. For the yolo version I implemented both image classification and object detection, there are separate files to run and output directories for each of these functions.
+## Part B
 
-For yolov5 you must first again create a .venv and install the requirements in the requirements.txt file. Then run the following command: detect.py for detection or ./classify/predict.py. The results will be stored in ./runs/detect/detections and ./runs/predict-cls/classifications respectively.
+I have deployed both versions of yolo, they can be found in the directories `yolov5` and `yolov8`. For the yolo version I implemented both
+
+1. image classification
+2. object detection.
+
+There are separate files to run and output directories for each of these functions.
+
+For yolov5 you must create a virtual environment and install the requirements in the `requirements.txt` file. Then run the following command: `detect.py` for detection or `./classify/predict.py`.
+
+The results will be stored in `./runs/detect/detections` and `./runs/predict-cls/classifications` respectively.
 
 For yolov8 you must first again create a .venv and install the requirements in the requirements.txt file. Then run the following command: detect.py for detection or ./classify.py. The results will be stored in ./ultralytics/detections and ./ultralytics/classifications respectively. Again I have already run the programs and the results are in the repo for you to view.
 
-# C
-I deployed the yolov8 model on the raspberry pi with a subset of the images. 
+## Part C
 
-On my laptop (12GB ram, 11th gen intel i5-1135G7 @ 2.40GHz) the subset was classified at 3.97 frames per second and 16.11% cpu usage. 
+I deployed the yolov8 model on the raspberry pi with a subset of the images.
+
+On my laptop (12GB ram, 11th gen intel i5-1135G7 @ 2.40GHz) the subset was classified at 3.97 frames per second and 16.11% cpu usage.
 
 On the raspberry pi 3 the performance was 0.08 frames per second and 73.51% cpu usage.
 
-A chart comparing the performance between the two devices can be found under ./Q8/PerformanceComparison.png
+A chart comparing the performance between the two devices is below
+
+![chart](./PerformanceComparison.png)
