Adds TODOs for q8 documentation

--- a/Q8/Q8.md
+++ b/Q8/Q8.md
@@ -2,7 +2,13 @@
 
 ## Part A
 
-For this section I deployed the Faster R-CNN model. It can be found in the directory FasterRCNN, to run the classification create a virtual environment `(python3 -m venv .venv)` and install everything in the `tf2/requirements.txt` file. Then run the following command:
+For this section I deployed the Faster R-CNN model. It can be found in the directory FasterRCNN, to run the classification create a virtual environment `(python3 -m venv .venv)` and install everything in the `tf2/requirements.txt` file.
+
+<!-- TODO: In the initial readme we have the grader create a virtual environment and then install all packages in requirements.txt. Do we have separate dependencies for running these Q8 programs? If so, where are they listed? -->
+
+<!-- TODO: What tf2/requirements.txt file are we talking about here? Do we mean to say just the normal requirements.txt? -->
+
+Then run the following command:
 
 ```bash
 python -m tf2.FasterRCNN --load-from=./fasterrcnn_tf2.h5 --predict-all-directory=./grocerystore
@@ -22,6 +28,8 @@ There are separate files to run and output directories for each of these functio
 For yolov5 you must create a virtual environment and install the requirements in the `requirements.txt` file. Then run the following command: `detect.py` for detection or `./classify/predict.py`.
 
 The results will be stored in `./runs/detect/detections` and `./runs/predict-cls/classifications` respectively.
+
+<!-- TODO: Do we need to create another virtual env if we are just installing the same requirements? -->
 
 For yolov8 you must first again create a .venv and install the requirements in the requirements.txt file. Then run the following command: detect.py for detection or ./classify.py. The results will be stored in ./ultralytics/detections and ./ultralytics/classifications respectively. Again I have already run the programs and the results are in the repo for you to view.
 
