--- a/Q8/Q8.md
+++ b/Q8/Q8.md
@@ -2,13 +2,11 @@
 
 ## Part A
 
-For this section I deployed the Faster R-CNN model. It can be found in the directory FasterRCNN, to run the classification create a virtual environment `(python3 -m venv .venv)` and install everything in the `tf2/requirements.txt` file.
-
-<!-- TODO: In the initial readme we have the grader create a virtual environment and then install all packages in requirements.txt. Do we have separate dependencies for running these Q8 programs? If so, where are they listed? -->
-
-<!-- TODO: What tf2/requirements.txt file are we talking about here? Do we mean to say just the normal requirements.txt? -->
+For this section I deployed the Faster R-CNN model. It can be found in the directory FasterRCNN, to run the classification create new virtual environment `(python3 -m venv .venv)` and install everything in the `./FasterRCNN/tf2/requirements.txt` file.
 
 Then run the following command:
+
+<!-- TODO: From which directory? The Q8 root or inside of the FasterRCNN directory? -->
 
 ```bash
 python -m tf2.FasterRCNN --load-from=./fasterrcnn_tf2.h5 --predict-all-directory=./grocerystore
@@ -25,13 +23,21 @@ I have deployed both versions of yolo, they can be found in the directories `yol
 
 There are separate files to run and output directories for each of these functions.
 
-For yolov5 you must create a virtual environment and install the requirements in the `requirements.txt` file. Then run the following command: `detect.py` for detection or `./classify/predict.py`.
+### YoloV5
 
-The results will be stored in `./runs/detect/detections` and `./runs/predict-cls/classifications` respectively.
+For yolov5 you must create a new virtual environment and install the requirements in the `./yolov5/requirements.txt` file. Then run the following command from the yolov5 directory: `python detect.py` for detection or `python classify/predict.py`.
 
-<!-- TODO: Do we need to create another virtual env if we are just installing the same requirements? -->
+<!-- TODO: Push up the results from the runs for yolov5. No runs/ directory -->
 
-For yolov8 you must first again create a .venv and install the requirements in the requirements.txt file. Then run the following command: detect.py for detection or ./classify.py. The results will be stored in ./ultralytics/detections and ./ultralytics/classifications respectively. Again I have already run the programs and the results are in the repo for you to view.
+The results will be stored in `yolov5/runs/detect/detections` and `yolov5/runs/predict-cls/classifications` respectively.
+
+### YoloV8
+
+For yolov8 you must first again create a virtual environment, and this time install the requirements in the `./yolov8/requirements.txt` file. Then run the following command: `python detect.py` for detection or `python classify.py` for classification.
+
+<!-- TODO: Verify these (above) are the correct commands with python. Before they were listed as ./classify.py and ./detect.py -->
+
+The results will be stored in `./yolov8/ultralytics/detections` and `./yolov8/ultralytics/classifications` respectively. Again I have already run the programs and the results are in the repo for you to view.
 
 ## Part C
 
