--- a/Q8/Q8.md
+++ b/Q8/Q8.md
@@ -37,7 +37,7 @@ For yolov8 you must first again create a virtual environment, and this time inst
 
 <!-- TODO: Verify these (above) are the correct commands with python. Before they were listed as ./classify.py and ./detect.py -->
 
-The results will be stored in `./yolov8/ultralytics/detections` and `./yolov8/ultralytics/classifications` respectively. Again I have already run the programs and the results are in the repo for you to view.
+The results will be stored in `yolov8/ultralytics/detections` and `yolov8/ultralytics/classifications` respectively. Again I have already run the programs and the results are in the repo for you to view.
 
 ## Part C
 
