--- a/Q8/Q8.md
+++ b/Q8/Q8.md
@@ -4,9 +4,7 @@
 
 For this section I deployed the Faster R-CNN model. It can be found in the directory FasterRCNN, to run the classification create new virtual environment `(python3 -m venv .venv)` and install everything in the `./FasterRCNN/tf2/requirements.txt` file.
 
-Then run the following command:
-
-<!-- TODO: From which directory? The Q8 root or inside of the FasterRCNN directory? -->
+Then run the following command from within the FasterRCNN:
 
 ```bash
 python -m tf2.FasterRCNN --load-from=./fasterrcnn_tf2.h5 --predict-all-directory=./grocerystore
@@ -27,15 +25,12 @@ There are separate files to run and output directories for each of these functio
 
 For yolov5 you must create a new virtual environment and install the requirements in the `./yolov5/requirements.txt` file. Then run the following command from the yolov5 directory: `python detect.py` for detection or `python classify/predict.py`.
 
-<!-- TODO: Push up the results from the runs for yolov5. No runs/ directory -->
 
 The results will be stored in `yolov5/runs/detect/detections` and `yolov5/runs/predict-cls/classifications` respectively.
 
 ### YoloV8
 
 For yolov8 you must first again create a virtual environment, and this time install the requirements in the `./yolov8/requirements.txt` file. Then run the following command: `python detect.py` for detection or `python classify.py` for classification.
-
-<!-- TODO: Verify these (above) are the correct commands with python. Before they were listed as ./classify.py and ./detect.py -->
 
 The results will be stored in `yolov8/ultralytics/detections` and `yolov8/ultralytics/classifications` respectively. Again I have already run the programs and the results are in the repo for you to view.
 
