Updates q7 for vanilla A start

--- a/Q7/Q7.md
+++ b/Q7/Q7.md
@@ -5,17 +5,26 @@ Comparison of the various algorithms over 10 iterations (no animation).
 |---|---|---|
 | Dijkstra | 0.33 | 121.78 |
 | A Star | 0.39 | 121.78 |
+| VanillaAStar | 0.6 | 121.78 |
 | BFS | 0.33 | 121.78 |
 | Bidirectional | 0.39 | 122.37 |
 | RRT Star | 4.83 | 25.86 |
 
-Cleary, the RRT Start takes by far the longest, however it has the shortest path between each point. The other algorithms are all very similar in time and in length, but CusomtBidirectional is slightly slower and has a slightly longer path.
+Cleary, the RRT Start takes by far the longest, however it has the shortest path between each point. The other algorithms are all very similar in time and in length, but CusomtBidirectional is slightly slower and has a slightly longer path. Our custom VanillaAStar did better because we weighted the movement forward so heavily, as shown in our heuristic
+
+```python
+def calc_heuristic(self, n1, n2):
+w = 2.0 # weight of heuristic
+d = w \* math.hypot(n1.x - n2.x, n1.y - n2.y)
+return d
+```
 
 Comparison with animation:
 | Algorithm | Time (s) | Path Cost |
 |---|---|---|
 | Dijkstra | 67.93 | 121.78 |
 | A Star | 34.68 | 121.78 |
+| VanillaAStar | 27.35 | 121.78 |
 | BFS | 63.36 | 121.78 |
 | Bidirectional | 12.43 | 122.37 |
 | RRT Star | 56.62 | 22.77 |
@@ -119,5 +128,3 @@ And
 where `g_score` is the elevation cost.
 
 The more elevation change affects how we charge the move. These values can be adjusted in the calculate_move_cost function (ex: from cost of 1 to cost of 2 for moving). Using this customization we could find a great path in almost every environment.
-
-
