--- a/Q7/Q7.md
+++ b/Q7/Q7.md
@@ -56,6 +56,10 @@ Graphs:
 
 ![A Star](./images/AStar.png)
 
+#### Vanilla A Star
+
+![Vanilla A Star](./images/Vanilla_A_Star.png)
+
 #### BFS
 
 ![BFS](./images/BFS.png)
