outlines difficulties involved in using algorithm, still needs second half of part A

--- a/Q3/Q3.md
+++ b/Q3/Q3.md
@@ -1,4 +1,27 @@
 ## Part A:
+Eventually, we were defeated by this implementation. Below is a list of the things we tried to get this program to run:
+* Ran 'python train_crop_velocity.py' - resulted in ModuleNotFoundError: No module named 'correlation_cuda'
+* Downloaded cuda for windows
+* Navigated to networks/correlation and ran 'python setup.py build' - resulted in   File "C:\Python311\Lib\site-packages\pkg_resources\_vendor\packaging\version.py", line 264, in __init__
+    match = self._regex.search(version)
+            ^^^^^^^^^^^^^^^^^^^^^^^^^^^
+TypeError: expected string or bytes-like object, got 'NoneType'
+* Edited C:\Python311\Lib\site-packages\pkg_resources\_vendor\packaging\version.py to be self._regex.search(str(version))
+* Re-ran 'python setup.py build' - resulted in RuntimeError:
+The detected CUDA version (12.3) mismatches the version that was used to compile
+PyTorch (None). Please make sure to use the same CUDA versions.
+* Uninstalled torch and reinstalled it, got: AttributeError: 'LegacyVersion' object has no attribute 'major'
+* Decided to try WSL: installed cuda and torch (torch broke wsl, had to restart computer, was successfully installed on 2nd try).
+* Ran 'python setup.py build' - result: 'raise RuntimeError(message) from e
+RuntimeError: Error compiling objects for extension
+* Pulled out old laptop with Linux Mint, downloaded repo, downloaded dependencies, ran 'python setup.py build'. Result: 'raise RuntimeError(message) from e
+RuntimeError: Error compiling objects for extension
+
+#### Merits of the Algorithm
+
+
+#### How it works
+
 
 
 
