--- a/Q3/Q3.md
+++ b/Q3/Q3.md
@@ -18,10 +18,16 @@ RuntimeError: Error compiling objects for extension
 RuntimeError: Error compiling objects for extension
 
 #### Merits of the Algorithm
-
+* It's distinct from the other algorithms used in this midterm. While the other algorithms deal with either forming a map or recognizing objects, this algorithm focuses on judging the velocity of oncoming objects
+* Of course, it uses elements present in the other algorithms - i.e. image recognition - but utilizes them in a distinct application
+* I will note, one obvious downside of the algorithm is the difficulty of implementation. If they had provided a docker image or some similar aid, this algorithm would be much more approachable.
 
 #### How it works
-
+* Essentially, this algorithm goes frame-by-frame in the provided input and searches for certain, key features.
+* When these features are found, they are identified, and a bounding box is provided.
+* This algorithm is then able to look at a sequence of frames, see how much a given object has shifted from one frame to the next, and calculate the distance traversed
+* Importantly, these calculations are made based on estimates of how far away an object is (for example, something shifting left by 3 pixels indicates a much higher velocity for an object that is 300 feet away than for an object that is 3 feet away).
+* Once the distance from the camera to the object - and the distance between where the object was and where it is now - are known, it is relatively simple calculation to judge the velocity based on the time elapsed.
 
 
 
