--- a/Q3/Q3.md
+++ b/Q3/Q3.md
@@ -49,4 +49,4 @@ Below, you can find both the original trajectory image, and below that you can s
  ![original trajectory with actual path overlaid](./trajectory_actual_path.png)
 
 
-Note: Given that I implemented both parts on a separate Linux machine, I have not included the implementations (as they are not specifically requested by the question) in this repo. I would be happy to show the program running on that machine, if so desired.
+Note: Given that I implemented both parts on a separate Linux machine, I have not included the implementations (as they are not requested by the question) in this repo. I would be happy to show the program running on that machine, if so desired.
