removes useless readmes

--- a/Q1/Q1.md
+++ b/Q1/Q1.md
@@ -1,5 +1,21 @@
 # The Cart Problem
 
+## Running the Program
+
+Be sure to use the installation [instructions](../README.md) found in the root of this repository.
+
+To run the simulation, execute this command from the within the `Q1` directory:
+
+```bash
+python3 demo.py
+```
+
+This will play through the simulation using the ml model, the controller, and the default non-trained model to show the difference between the three.
+
+If you would like to execute the trained model, execute, comment out the first lines of the demo and run the demo again.
+
+
+
 ## Part A
 
 The equations of motion that govern the inverted pendulum system describe the relationship between the various forces and torques acting on the cart and the pendulum. To analyze and control the system, you typically use Newton's second law for translational and rotational motion.
@@ -118,3 +134,10 @@ $
 So, in this scenario, the maximum recoverable angle ($\theta\_{\text{max}}$) is approximately 0.3022 radians, or about 17.3 degrees.
 
 Experimentally, the highest recoverable value was 20.91 degrees. This is likely due to the difference between the analytical equations and running the actual model.
+
+## Citations:
+
+- [Medium](https://medium.com/dabbler-in-de-stress/the-inverted-pendulum-problem-with-deep-reinforcement-learning-9f149b68c018)
+- [Cart Pole Equations](./05_cart_pole.pdf)
+- [PID Baseline](https://ctms.engin.umich.edu/CTMS/index.php?example=InvertedPendulum&section=ControlPID)
+- [Maximum Angle](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1617162/)
