--- a/Q5/Q5.md
+++ b/Q5/Q5.md
@@ -1,5 +1,19 @@
 # Question 5
 
+## Instructions to Run
+
+Be sure to use the installation [instructions](../README.md) found in the root of this repository to install the necessary dependencies. Once they are installed in a virtual env, you can run the simulation.
+
+To run the simulation, execute this command from the within the `Q5` directory:
+
+```bash
+python3 main.py
+```
+
+This will play through the cartpole simulation using the ml model, and then the frozenlake model.
+
+The questions are answered below.
+
 ## Part A
 
 Explain three merits and three demerits of using reinforcement learning for mechatronic systems.
