adds clarifition to q5

--- a/Q5/Q5.md
+++ b/Q5/Q5.md
@@ -4,13 +4,17 @@
 
 Be sure to use the installation [instructions](../README.md) found in the root of this repository to install the necessary dependencies. Once they are installed in a virtual env, you can run the simulation.
 
-To run the simulation, execute this command from the within the `Q5` directory:
+To run the catpole simulation, execute this command from the within the `Q5` directory:
 
 ```bash
 python3 main.py
 ```
 
-This will play through the cartpole simulation using the ml model, and then the frozenlake model.
+To run the frozen lake simulation, execute this command from the within the `Q5` directory:
+
+```bash
+python3 frozenlake.py
+```
 
 The questions are answered below.
 
@@ -40,7 +44,7 @@ Draw a diagram that contrasts reinforcement learning and controls.
 
 ## Part C
 
-rightForcefulCartpole.py contains the cartpole simulation with the right aggressive force as 50% more than the left.
+`rightForcefulCartpole.py` contains the cartpole simulation with the right aggressive force as 50% more than the left.
 
 See the code for both the frozen lake and the cartpole with an aggressive right in this directory.
 
